# GLPG-GameLib

./: README.md  _state.py  draw.py  pyproject.toml
.github/workflows/: publish.yml
glpg/: __init__.py  input.py  loop.py  window.py
glpg.egg-info/: PKG-INFO  SOURCES.txt
