[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name            = "glpg"
version         = "1.0.0"
description     = "A shorthand wrapper for pygame that makes game development fast and easy"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"
dependencies    = []

[project.optional-dependencies]
pygame    = ["pygame>=2.0.0"]
pygame-ce = ["pygame-ce>=2.0.0"]

keywords = ["pygame", "game", "gamedev", "wrapper", "shorthand"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage   = "https://github.com/BOU4EYT/GLPG-GameLib"
Repository = "https://github.com/BOU4EYT/GLPG-GameLib"